--- a/public/style.css
+++ b/public/style.css
@@ -36,6 +36,11 @@ body {
     z-index: 10000;
 }
 
+.show-copy {
+    opacity: 1;
+    z-index: 10000;
+}
+
 .form-user {
     display: flex;
     justify-content: center;
@@ -58,7 +63,22 @@ body {
     top: -160%;
 }
 
+.copy-user {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    background-color: #fff;
+    padding: 10px;
+    position: absolute;
+    top: -160%;
+}
+
 .show-edit .edit-user {
+    top: 14%;
+}
+
+.show-copy .copy-user {
     top: 14%;
 }
 
